// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`combocid.sql > line 4 1`] = `
[
  "CREATE TEMP TABLE combocidtest (foobar int)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 18,
              "relname": "combocidtest",
              "relpersistence": "t",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "foobar",
                  "is_local": true,
                  "location": 32,
                  "typeName": {
                    "location": 39,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`combocid.sql > line 6 1`] = `
[
  "BEGIN",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_BEGIN",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`combocid.sql > line 9 1`] = `
[
  "INSERT INTO combocidtest SELECT 1 LIMIT 0",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "combocidtest",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitCount": {
                  "A_Const": {
                    "ival": {},
                    "location": 40,
                  },
                },
                "limitOption": "LIMIT_OPTION_COUNT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 32,
                      "val": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 32,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`combocid.sql > line 20 1`] = `
[
  "INSERT INTO combocidtest VALUES (1)",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "combocidtest",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 33,
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`combocid.sql > line 23 1`] = `
[
  "SELECT ctid,cmin,* FROM combocidtest",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 24,
                  "relname": "combocidtest",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "ctid",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 12,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "cmin",
                          },
                        },
                      ],
                      "location": 12,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 17,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 17,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`combocid.sql > line 25 1`] = `
[
  "SAVEPOINT s1",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_SAVEPOINT",
            "savepoint_name": "s1",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`combocid.sql > line 27 1`] = `
[
  "UPDATE combocidtest SET foobar = foobar + 10",
  {
    "stmts": [
      {
        "stmt": {
          "UpdateStmt": {
            "relation": {
              "inh": true,
              "location": 7,
              "relname": "combocidtest",
              "relpersistence": "p",
            },
            "targetList": [
              {
                "ResTarget": {
                  "location": 24,
                  "name": "foobar",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "foobar",
                              },
                            },
                          ],
                          "location": 33,
                        },
                      },
                      "location": 40,
                      "name": [
                        {
                          "String": {
                            "sval": "+",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 10,
                          },
                          "location": 42,
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`combocid.sql > line 32 1`] = `
[
  "ROLLBACK TO s1",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_ROLLBACK_TO",
            "savepoint_name": "s1",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`combocid.sql > line 37 1`] = `
[
  "COMMIT",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_COMMIT",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`combocid.sql > line 47 1`] = `
[
  "DECLARE c CURSOR FOR SELECT ctid,cmin,* FROM combocidtest",
  {
    "stmts": [
      {
        "stmt": {
          "DeclareCursorStmt": {
            "options": 256,
            "portalname": "c",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 45,
                      "relname": "combocidtest",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 28,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "ctid",
                              },
                            },
                          ],
                          "location": 28,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 33,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "cmin",
                              },
                            },
                          ],
                          "location": 33,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 38,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 38,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`combocid.sql > line 49 1`] = `
[
  "DELETE FROM combocidtest",
  {
    "stmts": [
      {
        "stmt": {
          "DeleteStmt": {
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "combocidtest",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`combocid.sql > line 51 1`] = `
[
  "FETCH ALL FROM c",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_FORWARD",
            "howMany": 9223372036854776000,
            "portalname": "c",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`combocid.sql > line 53 1`] = `
[
  "ROLLBACK",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_ROLLBACK",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`combocid.sql > line 79 1`] = `
[
  "SELECT ctid,cmin,* FROM combocidtest FOR UPDATE",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 24,
                  "relname": "combocidtest",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "lockingClause": [
              {
                "LockingClause": {
                  "strength": "LCS_FORUPDATE",
                  "waitPolicy": "LockWaitBlock",
                },
              },
            ],
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "ctid",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 12,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "cmin",
                          },
                        },
                      ],
                      "location": 12,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 17,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 17,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`combocid.sql > line 97 1`] = `
[
  "CREATE TABLE IF NOT EXISTS testcase(
	id int PRIMARY KEY,
	balance numeric
)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "if_not_exists": true,
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 27,
              "relname": "testcase",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "id",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_PRIMARY",
                        "location": 45,
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 38,
                  "typeName": {
                    "location": 41,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "balance",
                  "is_local": true,
                  "location": 59,
                  "typeName": {
                    "location": 67,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "numeric",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`combocid.sql > line 109 1`] = `
[
  "SELECT * FROM testcase WHERE id = 1 FOR UPDATE",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "testcase",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "lockingClause": [
              {
                "LockingClause": {
                  "strength": "LCS_FORUPDATE",
                  "waitPolicy": "LockWaitBlock",
                },
              },
            ],
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "id",
                        },
                      },
                    ],
                    "location": 29,
                  },
                },
                "location": 32,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 1,
                    },
                    "location": 34,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
